--- a/my/gcc.env
+++ b/my/gcc.env
@@ -1,7 +1,7 @@
 # shellcheck shell=bash
 PATH=$(/usr/bin/tr : '\n' <<<"$PATH" | /usr/bin/grep -v -e '^$' | /usr/bin/grep -v -E 'gcc' | /usr/bin/paste -sd:)
 
-if [[ -d "${HOME}/scoop/apps/gcc/current" ]]; then
-    remove_from_path "${HOME}/scoop/apps/gcc/current"
-    push_to_path "${HOME}/scoop/apps/gcc/current"
+if [[ -d "${HOME}/scoop/apps/gcc/current/bin" ]]; then
+    remove_from_path "${HOME}/scoop/apps/gcc/current/bin"
+    push_to_path "${HOME}/scoop/apps/gcc/current/bin"
 fi
